[package]
name = "matomo-tracker-proxy-rs"
version = "0.2.1"
edition = "2021"

[dependencies]
axum = "0.6.20"
dotenv = "0.15.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.4.4", features = ["fs", "trace"] }
tracing = "0.1.39"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
